force-app/main/default/objects/Subscription__c/fields/HoldDuration__c.field-meta.xml
<CustomField>
    <fullName>HoldDuration__c</fullName>
    <description>the number of days book is taken. If no end date - use today</description>
    <formula>IF (ISBLANK(ReturnedDate__c), TODAY()- StartDate__c, ReturnedDate__c - StartDate__c  )</formula>
    <label>Hold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>