force-app/main/default/objects/Subscription__c/fields/Reader__c.field-meta.xml
<CustomField>
    <fullName>Reader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Exclude SubscriptionType__c = &apos;one-time&apos; from available readers</description>
    <label>Reader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Reader__c.SubscriptionType__c</field>
            <operation>notEqual</operation>
            <value>one-time</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Reader__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>