force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>IF book returned in time - show greeen flag, 
IF book not returned but in scope of allowed days - show yellow flag.
IF book not returned and out of allowed days- show red flag.</description>
    <formula>IF(StartDate__c + DaysOfHoldAllowed__c &gt;=  ReturnedDate__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;green&quot;),
IF (AND(ISBLANK(ReturnedDate__c),  TODAY() &lt;= (StartDate__c + DaysOfHoldAllowed__c)  ), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>