force-app/main/default/objects/Subscription__c/validationRules/NoMoreThan2MonthsOfRentAreAllowed.validationRule-meta.xml
<ValidationRule>
    <fullName>NoMoreThan2MonthsOfRentAreAllowed</fullName>
    <active>true</active>
    <description>No more than 2 months of rent are allowed (except for VIPs - up to 1 year).</description>
    <errorConditionFormula>IF (ISPICKVAL( Reader__r.SubscriptionType__c , &quot;VIP&quot;), DaysOfHoldAllowed__c &gt; 365, DaysOfHoldAllowed__c &gt; 60)</errorConditionFormula>
    <errorDisplayField>DaysOfHoldAllowed__c</errorDisplayField>
    <errorMessage>No more than 2 months of rent are allowed (except for VIPs - up to 1 year).</errorMessage>
</ValidationRule>