force-app/main/default/objects/Subscription__c/validationRules/ReturnedDateCannotBeLessThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturnedDateCannotBeLessThanStartDate</fullName>
    <active>true</active>
    <description>Returned Date Cannot Be Less Than Start Date.</description>
    <errorConditionFormula>ReturnedDate__c &lt;  StartDate__c</errorConditionFormula>
    <errorDisplayField>ReturnedDate__c</errorDisplayField>
    <errorMessage>Returned Date Cannot Be Less Than Start Date</errorMessage>
</ValidationRule>